# corax-template

./: CMakeLists.txt  README.md
scripts/: clean.sh  compile.sh  make.sh
src/: CmakeLists.txt  main.cpp
